--- a/css/mescss/menu.css
+++ b/css/mescss/menu.css
@@ -12,7 +12,7 @@
 
 .nav-toggle-bar,.nav-toggle-bar::before,.nav-toggle-bar::after {
     content: "";
-    background-color: black;
+    background-color: white;
     width: 100%;
     height: 2px;
     position: absolute;
@@ -71,7 +71,7 @@
     font-size: 3.4rem;
     transform: translateX(1000px);
 }
-.menu-open ul {
+.menu-open header ul {
     transform: translateX(0px);
 }
 
@@ -114,6 +114,10 @@
 .menu .ammi {
     pointer-events: none;
     cursor: default;
+}
+.menu-open .ammi {
+    pointer-events: auto;
+    cursor: url("#");
 }
 .menu-open .menu .mmi {
     width: 50px;
