--- a/css/mescss/typography.css
+++ b/css/mescss/typography.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 1.6rem;
     line-height: 1.6;
-    margin: 0 20px;
+    padding: 0 20px;
 }
 
 h1, h2, h3 {
