--- a/css/mescss/layout.css
+++ b/css/mescss/layout.css
@@ -375,7 +375,7 @@
     border: solid black 1px;
     color: white;
     height: 45px;
-    width: 260px;
+    width: 280px;
     border-radius: 40px;
     font-size: 2.7rem;
     margin-top: 20px;
@@ -387,7 +387,7 @@
     color: white;
     display: block;
     height:51px;
-    width: 260px;
+    width: 280px;
     text-align: center;
 }
 
@@ -559,7 +559,7 @@
     background-color: #A83039;
     border: solid black 1px;
     color: black;
-    height: 115px;
+    height: 130 px;
     width: 280px;
     border-radius: 40px;
     font-size: 2.7rem;
@@ -575,7 +575,6 @@
     position: relative;
     bottom: 0;
     left: 0;
-    top: 14px;
     color: white;
 }
 .hommeenarmure main>.films {
@@ -602,6 +601,8 @@
     height: 90px;
     padding-top: 20px;
     margin-top: -20px;
+    margin-bottom: 40px;
+    padding-bottom: 35px;
 }
 .problemesia main>p:first-of-type {
     text-align: center;
